test/corpus/url_values.txt
================================================================================
URL value with :< prefix
================================================================================
dn: cn=test,dc=example,dc=com
jpegPhoto:< file:///tmp/photo.jpg

--------------------------------------------------------------------------------

(source_file
  (entry
    (dn_spec
      (dn_value
        (value)))
    (attrval_spec
      (attribute_name)
      (url_value))))
